--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -21,18 +21,26 @@
             </table>
 
             <section aria-label="Billboard Banner" id="system-hero" style="background-image:url('image/iStock-1133275320.jpg');">
-                <div class="overlay"></div>
+                @*<div class="overlay"></div>*@
 
                 <div class="container">
                     <div class="hero-area">
                         <!--<div style="float:left; padding: 1em; margin-left: 2em;background-color:#0090bf"><br /> <br /> <br /> <br /> <br /> -->
-                        <div style="float:left; padding:1.3em; margin-left:0em;margin-bottom:0em;   background-color:#0090bf; width:644px">
+                        <div style="float: left;
+        padding: 1.3em;
+        margin-left: -16px !important;
+        overflow: auto;
+        margin-bottom: 0;
+        background-color: #0090bf;
+        width: 644px">
                             <br /><br />
                             <p style="font-size: 2.4em; color: #ffffff; margin-top: 1em; margin-bottom: 0em;"><strong>We Are Working To <br />Keep You Healthy.</strong>&nbsp;</p>
                             <p style="font-size: 1.9em; color: #ffffff; margin-bottom: 1em;">We're ready to take care of your <br />health care needs, you can rely on <br />our dedicated and caring physicians and staff.</p>
                             <p><a style="background-color:#ff8200; color:#fff !important;" href="about.html" target="_self" title="" class="button">LEARN MORE</a></p><br /><br />
                         </div>
+
                     </div>
+                    <div style="clear: both;"></div>
                 </div>
             </section>
             <!--  <br/> -->
