--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -586,11 +586,14 @@ h1 a:link, h2 a:link, h3 a:link, h4 a:link, h5 a:link, h6 a:link {
         transform: translateY(-50%);
         width: calc(100% - 70px);
         z-index: 10;
+        /*margin-left: 0;*/
     }
 
 
     #system-hero .hero-area p, #hospital-hero .hero-area p {
         margin-bottom: 2em;
+       /* margin-left:0;*/
+       /* position:relative;*/
     }
 
         #system-hero .hero-area p:last-child, #hospital-hero .hero-area p:last-child {
