--- a/Client/Shared/NavTop.razor
+++ b/Client/Shared/NavTop.razor
@@ -5,8 +5,8 @@
 
         <header id="header">
             <div id="logo">
-                <a href="index.html">
-                    @*<a href="index.html">*@
+                <a href="index">
+                    @*<a href="index">*@
                     @code {
 
                         void MethodToTriggerUrl()
@@ -31,13 +31,13 @@
 
                         <li class="rwf-parent-menu-item leaf">
 
-                            <a href="index.html" class="menu-link is-active"></a> <!--Home-->
+                            <a href="index" class="menu-link is-active"></a> <!--Home-->
                         </li>
 
 
                         <li class="rwf-parent-menu-item has-dropdown">
 
-                            <a href="srv_index.html" class="menu-link" style="color:#00569d !important;">Hospital <br /> Services</a>
+                            <a href="srv_index" class="menu-link" style="color:#00569d !important;">Hospital <br /> Services</a>
 
                             <span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="rwf-nav-fa-chevron-down fa fa-chevron-down fa-stack-1x fa-inverse"></i></span>
                             <ul class="nav-dropdown menu" aria-hidden="true" id="dropdown-2" aria-labelledby="button-2">
@@ -45,36 +45,28 @@
 
                                 <li class=" leaf">
 
-                                    <a href="srv_index.html" style="color:#fff !important;">See All Services</a>
+                                    <a href="srv_index" style="color:#fff !important;">See All Services</a>
                                 </li>
 
 
                                 <li class=" leaf">
 
-                                    <a href="srv_index.html#mvv" style="color:#fff !important;">Emergency Department</a>
+                                    <a href="srv_index#mvv" style="color:#fff !important;">Emergency Department</a>
                                 </li>
                                 <li class=" leaf">
 
-                                    <a href="srv_index.html#mvv" style="color:#fff !important;">Full-Service Laboratory</a>
+                                    <a href="srv_index#mvv" style="color:#fff !important;">Full-Service Laboratory</a>
                                 </li>
 
                                 <li class=" leaf">
 
-                                    <a href="srv_index.html#mvv" style="color:#fff !important;">Inpatient Care</a>
-                                </li>
-
-
-                                <li class=" leaf">
-
-                                    <a href="srv_index.html#mvv" style="color:#fff !important;">Radiology</a>
-
-
+                                    <a href="srv_index#mvv" style="color:#fff !important;">Inpatient Care</a>
                                 </li>
 
 
                                 <li class=" leaf">
 
-                                    <a href="srv_index.html#mvv" style="color:#fff !important;">Rehabilitation Services</a>
+                                    <a href="srv_index#mvv" style="color:#fff !important;">Radiology</a>
 
 
                                 </li>
@@ -82,7 +74,7 @@
 
                                 <li class=" leaf">
 
-                                    <a href="srv_index.html#mvv" style="color:#fff !important;">Respiratory Therapy</a>
+                                    <a href="srv_index#mvv" style="color:#fff !important;">Rehabilitation Services</a>
 
 
                                 </li>
@@ -90,7 +82,15 @@
 
                                 <li class=" leaf">
 
-                                    <a href="srv_index.html#mvv" style="color:#fff !important;">Swing Bed</a>
+                                    <a href="srv_index#mvv" style="color:#fff !important;">Respiratory Therapy</a>
+
+
+                                </li>
+
+
+                                <li class=" leaf">
+
+                                    <a href="srv_index#mvv" style="color:#fff !important;">Swing Bed</a>
 
 
                                 </li>
@@ -103,7 +103,7 @@
 
                         <li class="rwf-parent-menu-item has-dropdown">
 
-                            <a href="srv_pricing.html" class="menu-link" style="color:#00569d !important;">Pricing <br />  Transparency</a>
+                            <a href="srv_pricing" class="menu-link" style="color:#00569d !important;">Pricing <br />  Transparency</a>
 
                             <span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="rwf-nav-fa-chevron-down fa fa-chevron-down fa-stack-1x fa-inverse"></i></span>
                             <ul class="nav-dropdown menu" aria-hidden="true" id="dropdown-3" aria-labelledby="button-3">
@@ -111,7 +111,7 @@
 
                                 <li class=" leaf">
 
-                                    <a href="srv_pricing.html" style="color:#fff !important;">Hospital Pricing Information</a>
+                                    <a href="srv_pricing" style="color:#fff !important;">Hospital Pricing Information</a>
                                 </li>
                             </ul>
                         </li>
@@ -119,20 +119,20 @@
 
                         <li class="rwf-parent-menu-item has-dropdown">
 
-                            <a href="hw_events.html" class="menu-link" style="color:#00569d !important;">Health & Wellness</a>
+                            <a href="hw_events" class="menu-link" style="color:#00569d !important;">Health & Wellness</a>
 
                             <span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="rwf-nav-fa-chevron-down fa fa-chevron-down fa-stack-1x fa-inverse"></i></span>
                             <ul class="nav-dropdown menu" aria-hidden="true" id="dropdown-4" aria-labelledby="button-4">
 
                                 <li class=" leaf">
 
-                                    <a href="hw_events.html" style="color:#fff !important;">Classes & Events</a>
+                                    <a href="hw_events" style="color:#fff !important;">Classes & Events</a>
 
 
                                 </li>
                                 <li class=" leaf">
 
-                                    <a href="hw_links.html" style="color:#fff !important;">Health Resource Links</a>
+                                    <a href="hw_links" style="color:#fff !important;">Health Resource Links</a>
                                 </li>
 
 
@@ -142,7 +142,7 @@
 
                         <li class="rwf-parent-menu-item has-dropdown">
 
-                            <a href="contact.html" class="menu-link" style="color:#00569d !important;">About <br /> Us</a>
+                            <a href="contact" class="menu-link" style="color:#00569d !important;">About <br /> Us</a>
 
                             <span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="rwf-nav-fa-chevron-down fa fa-chevron-down fa-stack-1x fa-inverse"></i></span>
                             <ul class="nav-dropdown menu" aria-hidden="true" id="dropdown-5" aria-labelledby="button-5">
@@ -150,7 +150,7 @@
 
                                 <li class=" leaf">
 
-                                    <a href="contact.html" style="color:#fff !important;">Contact Us</a>
+                                    <a href="contact" style="color:#fff !important;">Contact Us</a>
                                 </li>
                                 <li class=" leaf">
 
@@ -159,28 +159,13 @@
 
                                 <li class=" leaf">
 
-                                    <a href="about.html" style="color:#fff !important;">About Rural Wellness Fairfax, Inc.</a>
+                                    <a href="about" style="color:#fff !important;">About Rural Wellness Fairfax, Inc.</a>
                                 </li>
                                 <li class=" leaf">
-                                    <a href="hospbrd.html" style="color:#fff !important;">About Our Governing Board</a>
+                                    <a href="hospbrd" style="color:#fff !important;">About Our Governing Board</a>
                                 </li>
                                 <li class=" leaf">
-                                    <a href="index.html" style="color:#fff !important;">About Fairfax Community Hospital</a> <!--Home-->
-                                </li>
-                            </ul>
-                        </li>
-
-
-                        <li class="rwf-parent-menu-item leaf has-dropdown">
-
-                            <a href="visiting.html" class="menu-link" style="color:#00569d !important;">Patients & Visitors</a>
-                            <span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="rwf-nav-fa-chevron-down fa fa-chevron-down fa-stack-1x fa-inverse"></i></span>
-                            <ul class="nav-dropdown menu" aria-hidden="true" id="dropdown-5" aria-labelledby="button-5">
-                                <li class=" leaf">
-                                    <a href="covid.html" style="color:#fff !important;">COVID-19: Keeping Our Patients Safe</a>
-                                </li>
-                                <li class=" leaf">
-                                    <a href="visiting.html" style="color:#fff !important;">Visitation Guidelines</a>
+                                    <a href="index" style="color:#fff !important;">About Fairfax Community Hospital</a> <!--Home-->
                                 </li>
                             </ul>
                         </li>
@@ -188,14 +173,29 @@
 
                         <li class="rwf-parent-menu-item leaf has-dropdown">
 
-                            <a href="media.html" class="menu-link" style="color:#00569d !important;">News & Media</a>
+                            <a href="visiting" class="menu-link" style="color:#00569d !important;">Patients & Visitors</a>
+                            <span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="rwf-nav-fa-chevron-down fa fa-chevron-down fa-stack-1x fa-inverse"></i></span>
+                            <ul class="nav-dropdown menu" aria-hidden="true" id="dropdown-5" aria-labelledby="button-5">
+                                <li class=" leaf">
+                                    <a href="covid" style="color:#fff !important;">COVID-19: Keeping Our Patients Safe</a>
+                                </li>
+                                <li class=" leaf">
+                                    <a href="visiting" style="color:#fff !important;">Visitation Guidelines</a>
+                                </li>
+                            </ul>
+                        </li>
+
+
+                        <li class="rwf-parent-menu-item leaf has-dropdown">
+
+                            <a href="media" class="menu-link" style="color:#00569d !important;">News & Media</a>
                             <span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="rwf-nav-fa-chevron-down fa fa-chevron-down fa-stack-1x fa-inverse"></i></span>
                             <ul class="nav-dropdown menu" aria-hidden="true" id="dropdown-5" aria-labelledby="button-5">
 
 
                                 <li class=" leaf">
 
-                                    <a href="media.html" style="color:#fff !important;">News &amp; Media</a>
+                                    <a href="media" style="color:#fff !important;">News &amp; Media</a>
                                 </li>
                             </ul>
                         </li>
