--- a/Client/Shared/NavTop.razor
+++ b/Client/Shared/NavTop.razor
@@ -31,7 +31,7 @@
 
                         <li class="rwf-parent-menu-item leaf">
 
-                            <a href="index" class="menu-link is-active"></a> <!--Home-->
+                            <a href="/" class="menu-link is-active"></a> <!--Home-->
                         </li>
 
 
