--- a/Client/Pages/Hw_events.razor
+++ b/Client/Pages/Hw_events.razor
@@ -2,8 +2,8 @@
 
 <div id="body-wrap">
     <main>
-             
-
+        <a class="skip-main" href="#layout">Skip to main content</a>
+        <br />
         <div id="layout">
             <!-- **************************************************************************************************** -->
             <article>
