--- a/Client/Pages/Srv_index.razor
+++ b/Client/Pages/Srv_index.razor
@@ -3,6 +3,8 @@
 
 <div id="body-wrap">
     <main>
+        <a class="skip-main" href="#layout">Skip to main content</a>
+        <br/>
         <div id="layout">
             <!-- **************************************************************************************************** -->
             <article>
@@ -166,7 +168,8 @@
             <tr bgcolor="#15223b" height="32px">
                 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
                 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                <td rowspan="3" style="width:275px"><span class="spfooter"><img src="image/fchlogoRwgtsm.png" alt="Bottom logo Rural Wellness" /></span>
+                <td rowspan="3" style="width:275px">
+                    <span class="spfooter"><img src="image/fchlogoRwgtsm.png" alt="Bottom logo Rural Wellness" /></span>
                 </td> <!--fchlogoRwgt.png-->
                 <td>&nbsp;</td>
                 <td style="width:328px"><span class="spfooterh"><b>AT FAIRFAX COMMUNITY HOSPITAL</b></span></td>
@@ -174,7 +177,8 @@
                 <td style="width:275px"><span class="spfooterh"><b>OUR NETWORK</b></span></td>
 
                 <td style="width:275px"><span class="spfooterh"><b>AFFILIATES</b></span></td>
-                <td rowspan="2" style="width:275px"><a href="https://www.facebook.com/fairfaxcommunityhospital/" target="_blank" title="Follow Fairfax Community Hospital on Facebook"><img border="0" alt="Facebook Icon" src="image/hiclipart.com10.png"></a>
+                <td rowspan="2" style="width:275px">
+                    <a href="https://www.facebook.com/fairfaxcommunityhospital/" target="_blank" title="Follow Fairfax Community Hospital on Facebook"><img border="0" alt="Facebook Icon" src="image/hiclipart.com10.png"></a>
                 </td>
                 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
                 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
@@ -264,44 +268,44 @@
                 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
             </tr>
             <!--        <tr bgcolor="15223b">
-                  <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                  <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                 <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                 <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                   <td>&nbsp;</td>
-                   <td>&nbsp;</td>
+              <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+              <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+             <td>&nbsp;</td>
+              <td>&nbsp;</td>
+             <td>&nbsp;</td>
+              <td>&nbsp;</td>
+               <td>&nbsp;</td>
+               <td>&nbsp;</td>
 
-                 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-            </tr> -->
+             <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+             <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        </tr> -->
             <!--   <tr bgcolor="15223b">
-                  <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                  <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                 <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                 <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                   <td>&nbsp;</td>
-                   <td>&nbsp;</td>
-                 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-            </tr> -->
+              <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+              <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+             <td>&nbsp;</td>
+              <td>&nbsp;</td>
+             <td>&nbsp;</td>
+              <td>&nbsp;</td>
+               <td>&nbsp;</td>
+               <td>&nbsp;</td>
+             <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+             <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        </tr> -->
         </table>
 
 
         <footer id="main-footer">
             <div class="footer-top">
                 <!--   <div id="sitemap">
-        <div > -->
+            <div > -->
                 <!--</div>-->
-            </div> 
-                <div class="copyright">
-                    <div class="row">
+            </div>
+            <div class="copyright">
+                <div class="row">
 
-                    </div>
                 </div>
+            </div>
         </footer>
 
     </main>
