--- a/Client/Shared/NavTop.razor
+++ b/Client/Shared/NavTop.razor
@@ -173,7 +173,7 @@
 
                         <li class="rwf-parent-menu-item leaf has-dropdown">
 
-                            <a href="visiting" class="menu-link" style="color:#00569d !important;">Patients & Visitors</a>
+                            <a href="visiting" class="menu-link" style="color:#00569d !important;">Patients & <br />Visitors</a>
                             <span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="rwf-nav-fa-chevron-down fa fa-chevron-down fa-stack-1x fa-inverse"></i></span>
                             <ul class="nav-dropdown menu" aria-hidden="true" id="dropdown-5" aria-labelledby="button-5">
                                 <li class=" leaf">
