--- a/Client/Pages/Hw_events.razor
+++ b/Client/Pages/Hw_events.razor
@@ -3,9 +3,9 @@
 <div id="body-wrap">
     <main>
         <a class="skip-main" href="#layout">Skip to main content</a>
-        <br />
         <div id="layout">
             <!-- **************************************************************************************************** -->
+            <table><tr><td>&nbsp;</td></tr></table><table><tr><td>&nbsp;</td></tr></table>
             <article>
                 <h9>Classes & Events </h9>
                 <hr class="style2" />
@@ -68,16 +68,16 @@
                         </div>
                     </li>
                     <!--
-                 <li class="cards__item">
-                  <div class="card">
-                   <img src="pics/GED1.png" width="380" height="250" alt="" />
-                    <div class="card__content">
-                      <div class="card__title">GED Classes</div>
-                      <p class="card__text"> </p>
-                    </div>
-                  </div>
-                </li>
-                -->
+             <li class="cards__item">
+              <div class="card">
+               <img src="pics/GED1.png" width="380" height="250" alt="" />
+                <div class="card__content">
+                  <div class="card__title">GED Classes</div>
+                  <p class="card__text"> </p>
+                </div>
+              </div>
+            </li>
+            -->
                 </ul>
 
 
