--- a/Client/Pages/Srv_index.razor
+++ b/Client/Pages/Srv_index.razor
@@ -4,9 +4,9 @@
 <div id="body-wrap">
     <main>
         <a class="skip-main" href="#layout">Skip to main content</a>
-        <br/>
         <div id="layout">
             <!-- **************************************************************************************************** -->
+            <table><tr><td>&nbsp;</td></tr></table><table><tr><td>&nbsp;</td></tr></table>
             <article>
                 <h9>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Patient Services&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </h9>
 
