--- a/Client/Pages/Srv_pricing.razor
+++ b/Client/Pages/Srv_pricing.razor
@@ -4,8 +4,8 @@
 <div id="body-wrap">
     <main>
         <a class="skip-main" href="#layout">Skip to main content</a>
-        <br />
         <div id="layout">
+             <table><tr><td>&nbsp;</td></tr></table><table><tr><td>&nbsp;</td></tr></table>
             <!-- **************************************************************************************************** -->
             <article>
                 <h9>Pricing Transparency </h9>
