--- a/Client/Shared/NavTop.razor
+++ b/Client/Shared/NavTop.razor
@@ -5,13 +5,13 @@
 
         <header id="header">
             <div id="logo">
-                <a href="index">
+                <a href="/">
                     @*<a href="index">*@
                     @code {
 
                         void MethodToTriggerUrl()
                         {
-                            NavigationManager.NavigateTo("index");
+                            NavigationManager.NavigateTo("/");
                         }
                     }
 
@@ -165,7 +165,7 @@
                                     <a href="hospbrd" style="color:#fff !important;">About Our Governing Board</a>
                                 </li>
                                 <li class=" leaf">
-                                    <a href="index" style="color:#fff !important;">About Fairfax Community Hospital</a> <!--Home-->
+                                    <a href="/" style="color:#fff !important;">About Fairfax Community Hospital</a> <!--Home-->
                                 </li>
                             </ul>
                         </li>
