--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="sidebar">
+<div class="">
     <NavTop />
 </div>
 
@@ -9,4 +9,3 @@
         @Body
     </div>
 </div>
--
