--- a/Client/Pages/Hw_events.razor
+++ b/Client/Pages/Hw_events.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Hw_events"
+@inject IJSRuntime JS;
 
 <div id="body-wrap">
     <main>
@@ -68,16 +69,16 @@
                         </div>
                     </li>
                     <!--
-             <li class="cards__item">
-              <div class="card">
-               <img src="pics/GED1.png" width="380" height="250" alt="" />
-                <div class="card__content">
-                  <div class="card__title">GED Classes</div>
-                  <p class="card__text"> </p>
-                </div>
-              </div>
-            </li>
-            -->
+                     <li class="cards__item">
+                      <div class="card">
+                       <img src="pics/GED1.png" width="380" height="250" alt="" />
+                        <div class="card__content">
+                          <div class="card__title">GED Classes</div>
+                          <p class="card__text"> </p>
+                        </div>
+                      </div>
+                    </li>
+                    -->
                 </ul>
 
 
@@ -222,7 +223,7 @@
         <footer id="main-footer">
             <div class="footer-top">
                 <!--   <div id="sitemap">
-            <div > -->
+                <div > -->
                 <!--</div> -->
             </div>
             <div class="copyright">
@@ -233,7 +234,7 @@
         </footer>
     </main>
 </div> <!-- end body-wrap -->
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+
 @code {
 
 }
