--- a/Client/Pages/Srv_pricing.razor
+++ b/Client/Pages/Srv_pricing.razor
@@ -1,11 +1,11 @@
 ﻿@page "/Srv_pricing"
-
+@inject IJSRuntime JS;
 
 <div id="body-wrap">
     <main>
         <a class="skip-main" href="#layout">Skip to main content</a>
         <div id="layout">
-             <table><tr><td>&nbsp;</td></tr></table><table><tr><td>&nbsp;</td></tr></table>
+            <table><tr><td>&nbsp;</td></tr></table><table><tr><td>&nbsp;</td></tr></table>
             <!-- **************************************************************************************************** -->
             <article>
                 <h9>Pricing Transparency </h9>
@@ -16,10 +16,13 @@
 
 
                 <form id="searchform">
-                    <a href="ex/Fairfax_Chargemaster.xls" download="Fairfax_Chargemaster.xls"><input type="button" id="download" value="Download" /></a>	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search here..." required="" size="40">
+                    <a href="ex/Fairfax_Chargemaster.xls" download="Fairfax_Chargemaster.xls"><input type="button" id="download" 
+                                                                                                     value="Download" /></a>	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search here..." required="" size="40">
                     <!--<button type="submit">Search</button>	-->
                     <!--<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search here..." 	-->
-                    &nbsp;<input type="button" id="clear" value="Clear Search" /><br />
+                    &nbsp;<input type="button" id="clear" value="Clear Search" />
+                    <button class="btn btn-primary" onclick="@CallJSMethod" id="clear" Text="Clear Search">Call JS Method</button>
+                    <br />
 
                     <table class="pure-table pure-table-horizontal" id="myTable">
                         <th>Description</th>
@@ -3963,37 +3966,37 @@
                     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
                 </tr>
                 <!--        <tr bgcolor="15223b">
-                  <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                  <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                 <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                 <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                   <td>&nbsp;</td>
-                   <td>&nbsp;</td>
+                      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                     <td>&nbsp;</td>
+                      <td>&nbsp;</td>
+                     <td>&nbsp;</td>
+                      <td>&nbsp;</td>
+                       <td>&nbsp;</td>
+                       <td>&nbsp;</td>
 
-                 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-            </tr> -->
+                     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                </tr> -->
                 <!--   <tr bgcolor="15223b">
-                  <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                  <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                 <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                 <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                   <td>&nbsp;</td>
-                   <td>&nbsp;</td>
-                 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-            </tr> -->
+                      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                     <td>&nbsp;</td>
+                      <td>&nbsp;</td>
+                     <td>&nbsp;</td>
+                      <td>&nbsp;</td>
+                       <td>&nbsp;</td>
+                       <td>&nbsp;</td>
+                     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                </tr> -->
             </table>
         </div>
 
         <footer id="main-footer">
             <div class="footer-top">
                 <!--   <div id="sitemap">
-            <div > -->
+                <div > -->
                 <!--</div>-->
             </div>
             <div class="copyright">
@@ -4005,5 +4008,19 @@
     </main>
 </div> <!-- end body-wrap -->
 @code {
+    @functions {
+        protected static string message { get; set; }
 
-}
+        
+        protected void CallJSMethod()
+        {
+            JSRuntime.InvokeAsync<bool>("JSMethod");
+        }
+
+
+        private void onClick(MouseEventArgs e)
+        {
+            Count++;
+        }
+    }
+    }
