--- a/Client/Pages/Contact.razor
+++ b/Client/Pages/Contact.razor
@@ -59,7 +59,7 @@
                         <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
                         <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
                         <td rowspan="3" style="width:275px"><span class="spfooter"><img src="image/fchlogoRwgtsm.png" alt="Bottom logo Rural Wellness" /></span>
-                        <td> <!--fchlogoRwgt.png-->
+                        </td> <!--fchlogoRwgt.png-->
                         <td>&nbsp;</td>
                         <td style="width:328px"><span class="spfooterh"><b>AT FAIRFAX COMMUNITY HOSPITAL</b></span></td>
 
@@ -67,7 +67,7 @@
 
                         <td style="width:275px"><span class="spfooterh"><b>AFFILIATES</b></span></td>
                         <td rowspan="2" style="width:275px"><a href="https://www.facebook.com/fairfaxcommunityhospital/" target="_blank" title="Follow Fairfax Community Hospital on Facebook"><img border="0" alt="Facebook Icon" src="image/hiclipart.com10.png"></a>
-                        <td>
+                        </td>
                         <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
                         <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
                     </tr>
