--- a/Client/Pages/About.razor
+++ b/Client/Pages/About.razor
@@ -5,6 +5,7 @@
             <a class="skip-main" href="#layout">Skip to main content</a>
             <div id="layout">
                 <!-- **************************************************************************************************** -->
+                <table><tr><td>&nbsp;</td></tr></table><table><tr><td>&nbsp;</td></tr></table>
                 <!-- Carousel  ================================================== -->
                 <div class="container col-md-12">
                     <div class="col-md-6">
@@ -14,34 +15,34 @@
                                 <div class="item active">
                                     <img class="first-slide" src="img/doctor-and-nurse-examine-x-rays.jpg" alt="First slide">
                                     <!-- In case you want some caption on your slide, uncomment this section here
-                                    <div class="container">
-                                      <div class="carousel-caption">
-                                        <h1>Example headline.</h1>
-                                        <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-                                      </div>
-                                    </div>-->
+                        <div class="container">
+                          <div class="carousel-caption">
+                            <h1>Example headline.</h1>
+                            <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+                          </div>
+                        </div>-->
                                 </div>
                                 <div class="item">
                                     <img class="second-slide" src="img/DrPatient.jpeg" alt="Second slide">
                                     <!-- In case you want some caption with button on your slide, uncomment this section here
-                                    <div class="container">
-                                      <div class="carousel-caption">
-                                        <h1>Another example headline.</h1>
-                                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-                                      </div>
-                                    </div> -->
+                        <div class="container">
+                          <div class="carousel-caption">
+                            <h1>Another example headline.</h1>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                          </div>
+                        </div> -->
                                 </div>
                                 <div class="item">
                                     <img class="third-slide" src="img/DrVacinate.jpeg" alt="Third slide">
                                     <!-- In case you want some caption with button on your slide, uncomment this section here
-                                    <div class="container">
-                                      <div class="carousel-caption">
-                                        <h1>One more for good measure.</h1>
-                                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-                                      </div>
-                                    </div> -->
+                        <div class="container">
+                          <div class="carousel-caption">
+                            <h1>One more for good measure.</h1>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                          </div>
+                        </div> -->
                                 </div>
                             </div>
                             <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
@@ -73,7 +74,7 @@
 
                 </div>
                 <!--  End Carousel
-                ================================================== -->
+    ================================================== -->
                 <!-- **************************************************************************************************** -->
 
                 <article>
@@ -228,10 +229,11 @@
                                         and then positive change is now an essential part of Fairfax Community Hospital's past history.
                                     </span> Before Rural Wellness Fairfax purchased the hospital, there were several news articles about the hospital.
                                     <a href="https://www.washingtonpost.com/news/national/wp/2019/05/11/feature/whos-going-to-take-care-of-these-people/?utm_term=.7d004289a5ab&wpisrc=nl_most&wpmm=1" target="_blank" style="color:#0000EE;">
-                                        <span style="color: #0000EE">This article that is a 20-minute read was published in the Washington Post, chronicles earlier history of this hospital during an extremely difficult time.</span></a> But despite the challenges facing the staff, people kept showing up to the emergency room and were either treated or referred to other medical facilities. The story shows what Rural Healthcare can truly mean to the surrounding community.
-                                        This article was read by many across the nation who were emotionally moved by the self-less actions of hospital staff, who kept showing up to work to save this rural hospital from closure.
+                                        <span style="color: #0000EE">This article that is a 20-minute read was published in the Washington Post, chronicles earlier history of this hospital during an extremely difficult time.</span>
+                                    </a> But despite the challenges facing the staff, people kept showing up to the emergency room and were either treated or referred to other medical facilities. The story shows what Rural Healthcare can truly mean to the surrounding community.
+                                    This article was read by many across the nation who were emotionally moved by the self-less actions of hospital staff, who kept showing up to work to save this rural hospital from closure.
 
-                                        <img src='image/FCH2.jpg' />    <a href="https://www.washingtonpost.com/news/national/wp/2019/05/11/feature/whos-going-to-take-care-of-these-people/?utm_term=.7d004289a5ab&wpisrc=nl_most&wpmm=1" target="_blank" style="color:#0000EE;"><span style="color:#0000EE;font-size:.76em;">A link to article by Eli Saslow/Washington Post</span></a>
+                                    <img src='image/FCH2.jpg' />    <a href="https://www.washingtonpost.com/news/national/wp/2019/05/11/feature/whos-going-to-take-care-of-these-people/?utm_term=.7d004289a5ab&wpisrc=nl_most&wpmm=1" target="_blank" style="color:#0000EE;"><span style="color:#0000EE;font-size:.76em;">A link to article by Eli Saslow/Washington Post</span></a>
                                 </p>
                             </td>
                         </tr>
