--- a/Client/Pages/Contact.razor
+++ b/Client/Pages/Contact.razor
@@ -6,6 +6,7 @@
             <a class="skip-main" href="#layout">Skip to main content</a>
             <div id="layout">
                 <!-- **************************************************************************************************** -->
+                <table><tr><td>&nbsp;</td></tr></table><table><tr><td>&nbsp;</td></tr></table>
                 <article>
 
                     <table>
