--- a/Client/Pages/About.razor
+++ b/Client/Pages/About.razor
@@ -5,7 +5,7 @@
             <a class="skip-main" href="#layout">Skip to main content</a>
             <div id="layout">
                 <!-- **************************************************************************************************** -->
-                <table><tr><td>&nbsp;</td></tr></table><table><tr><td>&nbsp;</td></tr></table><table><tr><td>&nbsp;</td></tr></table>
+                <table><tr><td>&nbsp;</td></tr></table><table><tr><td>&nbsp;</td></tr></table><table><tr><td>&nbsp;</td></tr></table><table><tr><td>&nbsp;</td></tr></table>
                 <!-- Carousel  ================================================== -->
                 <div class="container col-md-12">
                     <div class="col-md-6">
