--- a/Client/Pages/About.razor
+++ b/Client/Pages/About.razor
@@ -1,8 +1,7 @@
 ﻿@page "/About2"
 @inject IJSRuntime JS;
-    <iframe src="https://www.fpcapitalgroup.com/rfw/about.html" width="100%" height="100%" style="border:none;">
-    </iframe>
-
+    
+    <iframe width="1200" height="900" src="https://www.fpcapitalgroup.com/rfw/about.html" frameborder="0" allowfullscreen></iframe>
 
     @code {
 
