--- a/Client/Pages/About.razor
+++ b/Client/Pages/About.razor
@@ -1,4 +1,4 @@
-﻿@page "/About2"
+﻿@page "/About"
 @inject IJSRuntime JS;
     
     <iframe width="1200" height="900" src="https://www.fpcapitalgroup.com/rfw/about.html" frameborder="0" allowfullscreen></iframe>
