--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,12 +1,12 @@
 ﻿@page "/"
 @inject IJSRuntime JS;
 
-<table><tr><td>&nbsp;</td></tr></table>
-<table><tr><td>&nbsp;</td></tr></table>
 <div id="body-wrap">
     <main>
         <a class="skip-main" href="#layout">Skip to main content</a>
         <div id="layout">
+            <!-- **************************************************************************************************** -->
+            <table><tr><td>&nbsp;</td></tr></table><table><tr><td>&nbsp;</td></tr></table>
 
             <table width="100%" bgcolor="#005496" style="margin:0;padding:0;border-collapse:separate !important;border-spacing:0px;border:solid 0;display: table;">
                 <tr style="margin:0;padding:12px;border-collapse:collapse !important;">
