--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,12 +1,13 @@
 ﻿@page "/"
 @inject IJSRuntime JS;
+@inject NavigationManager NavigationManager
 
 <div id="body-wrap">
     <main>
         <a class="skip-main" href="#layout">Skip to main content</a>
         <div id="layout">
             <!-- **************************************************************************************************** -->
-            
+
             <table width="100%" bgcolor="#005496" style="margin:0;padding:0;border-collapse:separate !important;border-spacing:0px;border:solid 0;display: table;">
                 <tr style="margin:0;padding:12px;border-collapse:collapse !important;">
                     <td bgcolor="#fff" width="239px" style="margin:0;padding:0;border-collapse:collapse !important;border:solid 0;border-top-style:solid;border-top-color:#089de3;border-top-width:7px;">
