--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -4,8 +4,8 @@
     <NavTop />
 </div>
 
-<div class="main">
+@*<div class="main">*@
         <div class="content">
         @Body
     </div>
-</div>
+@*</div>*@
