--- a/Client/Pages/About.razor.css
+++ b/Client/Pages/About.razor.css
@@ -1,17 +1,17 @@
 ﻿ul {
-    list - style: none outside none;
-    padding - left: 0;
+    list-style: none outside none;
+    padding-left: 0;
     margin: 0;
 }
 
 .demo.item {
-    margin - bottom: 0px;
-    margin - top: 0px;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 .content-slider li {
-    background - color: #ed3020;
-    text - align: center;
+    background-color: #ed3020;
+    text-align: center;
     color: #FFF;
 }
 
@@ -22,12 +22,12 @@
 
 .demo {
     width: 800px;
-    margin - left: 80px;
+    margin-left: 80px;
 }
-/*! lightslider - v1.1.6 - 2016-10-25
+/*! lightslider-v1.1.6-2016-10-25
 * https://github.com/sachinchoolur/lightslider
 * Copyright (c) 2016 Sachin N; Licensed MIT */
-/*! lightslider - v1.1.3 - 2015-04-14
+/*! lightslider-v1.1.3-2015-04-14
 * https://github.com/sachinchoolur/lightslider
 * Copyright (c) 2015 Sachin N; Licensed MIT */
 /** /!!! core css Should not edit !!!/**/
@@ -36,7 +36,6 @@
     overflow: hidden;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
-    -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none
@@ -165,7 +164,6 @@
     -moz-transition-property: -moz-transform;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
-    -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
@@ -454,8 +452,6 @@
 .lightSlider.lsGrab > * {
     cursor: -webkit-grab;
     cursor: -moz-grab;
-    cursor: -o-grab;
-    cursor: -ms-grab;
     cursor: grab;
 }
 
@@ -463,8 +459,6 @@
     cursor: move;
     cursor: -webkit-grabbing;
     cursor: -moz-grabbing;
-    cursor: -o-grabbing;
-    cursor: -ms-grabbing;
     cursor: grabbing;
 }
 
@@ -6116,7 +6110,6 @@ a.thumbnail.active, a.thumbnail:focus, a.thumbnail:hover {
     background-image: -webkit-linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
     background-image: -o-linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
     background-image: linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
-    -webkit-background-size: 40px 40px;
     background-size: 40px 40px
 }
 
@@ -7222,8 +7215,8 @@ button.close {
         transition: transform .6s ease-in-out;
         -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
-        -webkit-perspective: 1000;
-        perspective: 1000
+        -webkit-perspective: 1000px;
+        perspective: 1000px;
     }
 
         .carousel-inner > .item.active.right, .carousel-inner > .item.next {
